873655: Don't bundle the jar deps
Reuse the ant target that creates symlinks to the system jar copies
after exploding the war, so they're recognized by rpmbuild as symlinks.

--- a/build.xml
+++ b/build.xml
@@ -219,10 +219,10 @@
     <attribute name="dir" />
 
     <sequential>
-      <echo message="Symlinking @{jars}" />
+      <echo message="Copying @{jars}" />
       <exec executable="build-jar-repository" failonerror="true" >
-        <arg value="--preserve-naming" />
-        <arg value="-c @{dir}" />
+        <arg value="-p" />
+        <arg value="-s @{dir}" />
         <arg line="@{jars}" />
       </exec>
     </sequential>
