--- a/.settings/org.eclipse.jdt.ui.prefs
+++ b/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,3 @@
-#Tue Mar 02 16:10:26 EST 2010
 cleanup.add_default_serial_version_id=true
 cleanup.add_generated_serial_version_id=false
 cleanup.add_missing_annotations=false
@@ -6,6 +5,7 @@ cleanup.add_missing_deprecated_annotations=true
 cleanup.add_missing_methods=false
 cleanup.add_missing_nls_tags=false
 cleanup.add_missing_override_annotations=true
+cleanup.add_missing_override_annotations_interface_methods=true
 cleanup.add_serial_version_id=false
 cleanup.always_use_blocks=true
 cleanup.always_use_parentheses_in_expressions=false
@@ -53,7 +53,7 @@ cleanup_profile=_candlepin
 cleanup_settings_version=2
 eclipse.preferences.version=1
 formatter_profile=_real-candlepin
-formatter_settings_version=11
+formatter_settings_version=12
 org.eclipse.jdt.ui.exception.name=e
 org.eclipse.jdt.ui.gettersetter.use.is=true
 org.eclipse.jdt.ui.javadoc=true
