--- a/rel-eng/tito.props
+++ b/rel-eng/tito.props
@@ -25,3 +25,7 @@ blacklist =
 [katello-thirdparty-candlepin-fedora17]
 disttag = .fc17
 blacklist =
+
+[katello-thirdparty-candlepin-fedora18]
+disttag = .fc18
+blacklist =
