--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,3 +7,6 @@ log4j.logger.org.hibernate.type=INFO
 # General debug for everything.  Very noisy
 log4j.logger.org.candlepin=INFO
 log4j.logger.org.candlepin.util.filters.DumpFilter=INFO
+# used for debugging with the jdbc logdriver
+#log4j.logger.net.rkbloom.logdriver.LogConnection=DEBUG
+#log4j.logger.net.rkbloom.logdriver.LogPreparedStatement=DEBUG
