get resteasy and jackson classes in candlepin-api.jar of rpm

--- a/build.xml
+++ b/build.xml
@@ -149,6 +149,8 @@
         <include name="**/pki/**"/>
         <include name="**/exceptions/**"/>
         <include name="**/util/**"/>
+        <include name="**/resteasy/**"/>
+        <include name="**/jackson/**"/>
       </fileset>
       <manifest>
         <attribute name="Implementation-Vendor" value="" />
