--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,3 +10,4 @@ log4j.logger.org.candlepin.util.filters.DumpFilter=INFO
 # used for debugging with the jdbc logdriver
 #log4j.logger.net.rkbloom.logdriver.LogConnection=DEBUG
 #log4j.logger.net.rkbloom.logdriver.LogPreparedStatement=DEBUG
+log4j.logger.org.candlepin.policy.js.compliance=DEBUG
