--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,9 +5,9 @@ log4j.rootLogger=WARN,RootAppender
 
 log4j.logger.org.hibernate.type=INFO
 # General debug for everything.  Very noisy
-log4j.logger.org.candlepin=INFO
+log4j.logger.org.candlepin=DEBUG
 log4j.logger.org.candlepin.util.filters.DumpFilter=INFO
 # used for debugging with the jdbc logdriver
 #log4j.logger.net.rkbloom.logdriver.LogConnection=DEBUG
 #log4j.logger.net.rkbloom.logdriver.LogPreparedStatement=DEBUG
-log4j.logger.org.candlepin.policy.js=DEBUG
+#log4j.logger.org.candlepin.policy.js=DEBUG
