--- a/rel-eng/tito.props
+++ b/rel-eng/tito.props
@@ -1,6 +1,6 @@
 [globalconfig]
-default_builder = spacewalk.releng.builder.Builder
-default_tagger = spacewalk.releng.tagger.VersionTagger
+default_builder = tito.builder.Builder
+default_tagger = tito.tagger.VersionTagger
 
 [candlepin-nightly-rhel6]
 disttag = .el6
