adding f19 for katello

--- a/rel-eng/tito.props
+++ b/rel-eng/tito.props
@@ -21,3 +21,7 @@ blacklist =
 [katello-thirdparty-candlepin-fedora18]
 disttag = .fc18
 blacklist =
+
+[katello-thirdparty-candlepin-fedora19]
+disttag = .fc19
+blacklist =
