Generate candlepin.conf based on a template and YAML data.

--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,5 @@ buildconf/scripts/gen_products*
 generated_certs/
 buildconf/scripts/import_products_ipa.json
 buildconf/scripts/import_products.json
-
+custom.yaml
 website/apidoc
