--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -10,5 +10,8 @@ log4j.logger.org.candlepin.util.filters.DumpFilter=INFO
 # used for debugging with the jdbc logdriver
 #log4j.logger.net.rkbloom.logdriver.LogConnection=DEBUG
 #log4j.logger.net.rkbloom.logdriver.LogPreparedStatement=DEBUG
-log4j.logger.org.candlepin.policy.js=DEBUG
+log4j.logger.org.candlepin.policy.js=INFO
 #log4j.logger.org.hibernate=trace
+
+# Silence a bunch of constant hsqldb messages:
+log4j.logger.org.hibernate.tool.hbm2ddl=SEVERE
