--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,12 +1,12 @@
 log4j.appender.RootAppender=org.apache.log4j.FileAppender
 log4j.appender.RootAppender.File=/var/log/candlepin/candlepin.log
 log4j.appender.RootAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.RootAppender.layout.ConversionPattern=%d{MMM dd HH:mm:ss} [%X{requestType}:%X{requestUuid}] %-5p %c - %m%n
+log4j.appender.RootAppender.layout.ConversionPattern=%d{MMM dd HH:mm:ss} [%X{requestType}:%X{requestUuid}]%X{org} %-5p %c - %m%n
 
 log4j.appender.ErrorAppender=org.apache.log4j.FileAppender
 log4j.appender.ErrorAppender.File=/var/log/candlepin/error.log
 log4j.appender.ErrorAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.ErrorAppender.layout.ConversionPattern=%d{MMM dd HH:mm:ss} [%X{requestType}:%X{requestUuid}] %-5p %c - %m%n
+log4j.appender.ErrorAppender.layout.ConversionPattern=%d{MMM dd HH:mm:ss} [%X{requestType}:%X{requestUuid}]%X{org} %-5p %c - %m%n
 log4j.appender.ErrorAppender.Threshold=WARN
 
 log4j.rootLogger=WARN,RootAppender,ErrorAppender
