Log with ISO8601 date format.

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.appender.RootAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.RootAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.RootAppender.layout.ConversionPattern=%d{MMM dd HH:mm:ss} [%t] %-5p %c - %m%n
+log4j.appender.RootAppender.layout.ConversionPattern=%d{ISO8601} [%t] %-5p %c - %m%n
 log4j.rootLogger=WARN,RootAppender
 
 #log4j.logger.org.hibernate.type=INFO
