--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -14,4 +14,4 @@ log4j.logger.org.candlepin.policy.js=INFO
 #log4j.logger.org.hibernate=trace
 
 # Silence a bunch of constant hsqldb messages:
-log4j.logger.org.hibernate.tool.hbm2ddl=SEVERE
+log4j.logger.org.hibernate.tool.hbm2ddl=FATAL
