--- a/build.xml
+++ b/build.xml
@@ -26,7 +26,7 @@
     cglib codehaus-jackson/jackson-core-lgpl codehaus-jackson/jackson-jaxrs
     codehaus-jackson/jackson-mapper-lgpl codehaus-jackson/jackson-xc
     commons-codec commons-collections
-    commons-httpclient commons-io commons-lang commons-logging
+    commons-httpclient commons-io commons-lang
     dom4j gettext-commons google-collections guice
     guice-assistedinject guice-multibindings guice-persist guice-servlet
     guice-throwingproviders hibernate-annotations hibernate-commons-annotations
