--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,7 @@
   <property name="jar.deps" value="antlr aopalliance apache-mime4j bcprov-jdk16 c3p0
     sisu-cglib/cglib jackson-annotations jackson-core jackson-databind
     jackson-jaxrs-providers/jackson-jaxrs-json-provider jackson-module-jaxb-annotations
-    jackson-jaxrs-providers/jackson-jaxrs-base
+    jackson-jaxrs-providers/jackson-jaxrs-base istack-commons-runtime
     commons-codec commons-collections
     commons-httpclient commons-io commons-lang
     dom4j gettext-commons google-collections guice
