Remove servlet-api from the war file.
The servlet-api classes should not be included in WEB-INF/lib according
to the servlet specification.

--- a/build.xml
+++ b/build.xml
@@ -218,6 +218,7 @@
       </classes>
       <classes dir="${target.dir}/generated-source" />
       <lib dir="${dist.lib.dir}">
+        <exclude name="**/servlet.jar" />
         <!-- can be removed once candlepin-deps is dead -->
         <exclude name="**/emma*.jar" />
         <exclude name="**/hamcrest*.jar" />
