--- a/rel-eng/releasers.conf
+++ b/rel-eng/releasers.conf
@@ -36,7 +36,7 @@ rsync = dept.rhndev.redhat.com:/var/www/dept/yum/candlepin/0.5/RHEL/6/ dept.rhnd
 
 [rhel]
 releaser = tito.release.DistGitReleaser
-branches = candlepin-1-rhel-6
+branches = candlepin-1-rhel-6 candlepin-1-rhel-7
 
 [koji]
 releaser = tito.release.KojiReleaser
