--- a/gutterball/src/main/webapp/WEB-INF/web.xml
+++ b/gutterball/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 
     <listener>
         <listener-class>
-            org.jboss.resteasy.plugins.guice.GuiceResteasyBootstrapServletContextListener
+            org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap
         </listener-class>
     </listener>
 
