Add basic auth support for mongodb in gutterball

--- a/gutterball/src/main/resources/default.properties
+++ b/gutterball/src/main/resources/default.properties
@@ -4,3 +4,13 @@ gutterball.amqp.keystore = /etc/gutterball/certs/amqp/gutterball.jks
 gutterball.amqp.keystore_password = password
 gutterball.amqp.truststore = /etc/gutterball/certs/amqp/gutterball.truststore
 gutterball.amqp.truststore_password = password
+
+gutterball.mongodb.host = localhost
+gutterball.mongodb.port = 27017
+gitterball.mongodb.database = gutterball
+
+#
+# Enable when mongodb is configured in auth mode
+#
+#gutterball.mongodb.username = gutterball
+#gutterball.mongodb.password = password
