Write syntastic info to the correct location.

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@
 **/.externalToolBuilders
 **/.project
 **/.pydevproject
-**/.syntastic_class_path
+**/.syntastic_javac_config
 **/.zanata-cache
 
 **/build/
