--- a/server/build.xml
+++ b/server/build.xml
@@ -43,9 +43,17 @@
     <attribute name="text" />
     <attribute name="prop" />
     <sequential>
-      <exec executable="${script.dir}/antgetvr" outputproperty="@{prop}">
-        <arg value="@{text}" />
-      </exec>
+      <loadfile property="@{prop}" srcFile="candlepin.spec">
+          <filterchain>
+              <linecontainsregexp>
+                  <regexp pattern="@{text}"/>
+              </linecontainsregexp>
+              <replaceregex pattern="@{text}" replace=""/>
+              <replaceregex pattern="\%\{\?dist\}" replace=""/>
+              <striplinebreaks/>
+              <trim/>
+          </filterchain>
+      </loadfile>
     </sequential>
   </macrodef>
 
