--- a/common/build.xml
+++ b/common/build.xml
@@ -66,14 +66,27 @@
 
   <target name="da_popo">
     <mkdir dir="${target.dir}/generated-source" />
-    <apply executable="${script.dir}/antmsgfmt"
-           dest="${target.dir}/generated-source">
-      <arg value="org.candlepin.i18n.Messages" />
-      <arg value="${target.dir}/generated-source" />
-      <fileset dir="${cp-home}/po">
-        <include name="**/*.po" />
-      </fileset>
-      <mapper type="glob" from="*.po" to="*.class" />
+    <apply executable="msgfmt" failonerror="true" relative="true">
+      <arg value="--java2"/>
+      <arg value="--resource"/>
+      <arg value="org.candlepin.i18n.Messages"/>
+      <arg value="-d"/>
+      <arg value="${target.dir}/generated-source"/>
+      <arg value="--locale"/>
+      <!--
+       The end result of the chained mapper will be placed here.  This
+       is a bit of an abuse because we're using targetfile as a parameter
+       instead of a destination file, but that's the only way I knew how to
+       do it.
+      -->
+      <targetfile/>
+      <!-- Take the name of the po file, run basename on it and then strip
+        off the ".po" suffix" -->
+      <chainedmapper>
+          <flattenmapper/>
+          <globmapper from="*.po" to="*"/>
+      </chainedmapper>
+      <fileset dir="${cp-home}" includes="po/**/*.po"/>
     </apply>
   </target>
 
