--- a/gutterball/build.xml
+++ b/gutterball/build.xml
@@ -12,51 +12,30 @@
   <property name="target.dir" location="${project.home}/target" />
   <property name="pkgname" value="org.candlepin.gutterball" />
 
-  <fail message="The deps.file property must be defined.">
-    <condition>
-      <not><isset property="deps.file"/></not>
-    </condition>
-  </fail>
+  <property name="scl.regexp" value="^scl:"/>
 
   <condition property="lib.dir" value="lib">
     <not><isset property="lib.dir"/></not>
   </condition>
 
-  <!--
-    List of jars we expect to install from /usr/share/java in a regular
-    build. The input should be a newline delimited list of artifact names or
-    coordinates that build-jar-repository can understand.
-  -->
-  <loadfile property="jar.deps" srcFile="${deps.file}">
-    <filterchain>
-      <stripjavacomments/>
-      <prefixlines prefix=" "/>
-      <striplinebreaks/>
-      <trim/>
-    </filterchain>
-  </loadfile>
+  <target name="prereqs">
+    <fail message="The dist.name property must be defined." unless="dist.name"/>
 
-  <macrodef name="grepfromspec">
-    <attribute name="text" />
-    <attribute name="prop" />
-    <sequential>
-      <loadfile property="@{prop}" srcFile="gutterball.spec">
-        <filterchain>
-          <linecontainsregexp regexp="@{text}"/>
-          <replaceregex pattern="@{text}" replace=""/>
-          <replaceregex pattern="\%\{\?dist\}" replace=""/>
-          <striplinebreaks/>
-          <trim/>
-        </filterchain>
-      </loadfile>
-    </sequential>
-  </macrodef>
+    <property name="deps.file" value="deps/${dist.name}.txt"/>
+
+    <fail message="${deps.file} is missing.">
+      <condition>
+        <not>
+          <available file="${deps.file}"/>
+        </not>
+      </condition>
+    </fail>
+  </target>
 
   <target name="setvr">
     <grepfromspec text="Version:" prop="version" />
     <grepfromspec text="Release:" prop="release" />
-    <property name="war.file"
-      value="${target.dir}/gutterball-${version}.war" />
+    <property name="war.file" value="${target.dir}/gutterball-${version}.war"/>
   </target>
 
   <target name="msgfmt">
@@ -81,14 +60,13 @@
         <flattenmapper/>
         <globmapper from="*.po" to="*"/>
       </chainedmapper>
-      <fileset dir="${cp-home}" includes="po/**/*.po"/>
+      <fileset dir="${project.home}" includes="po/**/*.po"/>
     </apply>
   </target>
 
-  <target name="compile" depends="setvr, msgfmt, initjars">
+  <target name="compile" depends="prereqs, setvr, msgfmt, initjars">
     <mkdir dir="${target.dir}/classes" />
     <mkdir dir="${target.dir}/resources" />
-    <mkdir dir="${lib.dir}" />
     <javac destdir="${target.dir}/classes"
            optimize="off"
            debug="on"
@@ -115,11 +93,19 @@
     </copy>
   </target>
 
-  <target name="initjars">
+  <target name="initjars" depends="prereqs">
+    <mkdir dir="${lib.dir}" />
+    <loadlist src="${deps.file}" prop="jar.deps" negate="true">
+      <regexp pattern="${scl.regexp}"/>
+    </loadlist>
+    <loadlist src="${deps.file}" prop="scl.mongodb24.deps" negate="false">
+      <regexp pattern="${scl.regexp}mongodb24:"/>
+    </loadlist>
     <jpackage-deps jars="${jar.deps}" dir="${lib.dir}" />
+    <scl-deps jars="${scl.mongodb24.deps}" dir="${lib.dir}" scl="mongodb24"/>
   </target>
 
-  <target name="package" depends="initjars,compile,compile_withcpdeps">
+  <target name="package" depends="initjars, compile">
     <war destfile="${war.file}" webxml="${webapp.dir}/WEB-INF/web.xml">
       <classes dir="${target.dir}/classes" />
       <classes dir="${target.dir}/generated-source" />
@@ -139,21 +125,98 @@
   </target>
 
   <!--
+    Load a list of items from a file.  Provide the file, the property to read into, and
+    optionally a regular expresion to filter on.
+  -->
+  <macrodef name="loadlist">
+    <attribute name="src"/>
+    <attribute name="prop"/>
+    <attribute name="negate" default="false"/>
+    <element name="regexp-element" implicit="true"/>
+    <sequential>
+      <loadfile property="@{prop}" srcFile="@{src}">
+        <filterchain>
+          <stripjavacomments/>
+          <linecontainsregexp negate="@{negate}">
+            <regexp-element/>
+          </linecontainsregexp>
+          <prefixlines prefix=" "/>
+          <striplinebreaks/>
+          <trim/>
+        </filterchain>
+      </loadfile>
+    </sequential>
+  </macrodef>
+
+  <macrodef name="grepfromspec">
+    <attribute name="text" />
+    <attribute name="prop" />
+    <sequential>
+      <loadfile property="@{prop}" srcFile="gutterball.spec">
+        <filterchain>
+          <linecontainsregexp>
+            <regexp pattern="@{text}"/>
+          </linecontainsregexp>
+          <replaceregex pattern="@{text}" replace=""/>
+          <replaceregex pattern="\%\{\?dist\}" replace=""/>
+          <striplinebreaks/>
+          <trim/>
+        </filterchain>
+      </loadfile>
+    </sequential>
+  </macrodef>
+
+  <!--
     creates symlinks for jpackage jars
-    requires: jpackage-utils
-    other: requires rpms of the jars specified to be installed
+    Optionally contains any elements that can be passed to exec.
+    Primarily meant for setting custom environment variables.
   -->
   <macrodef name="jpackage-deps">
-    <attribute name="jars" />
-    <attribute name="dir" /> <!-- destination -->
+    <attribute name="jars"/>
+    <attribute name="dir"/>
+    <element name="custom-environment" optional="true" implicit="true"/>
 
     <sequential>
       <echo message="Symlinking @{jars}" />
       <exec executable="build-jar-repository" failonerror="true" >
+        <custom-environment/>
         <arg value="-p" />
         <arg value="-s @{dir}" />
         <arg line="@{jars}" />
       </exec>
+    </sequential>
+  </macrodef>
+
+  <macrodef name="scl-deps">
+    <attribute name="jars" />
+    <attribute name="scl" />
+    <attribute name="dir" />
+
+    <sequential>
+      <!-- Terrible hack to enable build-jar-repository to look inside an SCL
+           for JARs.  See https://bugzilla.redhat.com/show_bug.cgi?id=1127346 -->
+      <condition property="build.jar.override" value="JAVAAPP_LIBDIR">
+        <equals arg1="${dist.name}" arg2="el6"/>
+      </condition>
+
+      <condition property="build.jar.override" value="_javadirs">
+        <equals arg1="${dist.name}" arg2="el7"/>
+      </condition>
+
+      <!-- At this point all the SCL JARs are in the format scl:blah:mydep
+           so we need to remove the "scl" and the SCL name -->
+      <loadresource property="cleaned.jars">
+        <string value="@{jars}"/>
+        <filterchain>
+           <tokenfilter>
+             <stringtokenizer/> <!-- Break the JAR names into a list of tokens. -->
+             <replaceregex replace="" pattern="${scl.regexp}@{scl}:"/>
+           </tokenfilter>
+        </filterchain>
+      </loadresource>
+      <jpackage-deps jars="${cleaned.jars}" dir="@{dir}">
+        <env key="${build.jar.override}" value="/opt/rh/@{scl}/root/usr/share/java" />
+      </jpackage-deps>
     </sequential>
   </macrodef>
 </project>
