--- a/gutterball/build.xml
+++ b/gutterball/build.xml
@@ -105,7 +105,7 @@
     <scl-deps jars="${scl.mongodb24.deps}" dir="${lib.dir}" scl="mongodb24"/>
   </target>
 
-  <target name="package" depends="initjars, compile">
+  <target name="package" depends="compile">
     <war destfile="${war.file}" webxml="${webapp.dir}/WEB-INF/web.xml">
       <classes dir="${target.dir}/classes" />
       <classes dir="${target.dir}/generated-source" />
@@ -125,8 +125,8 @@
   </target>
 
   <!--
-    Load a list of items from a file.  Provide the file, the property to read into, and
-    optionally a regular expresion to filter on.
+    Load a list of items from a file.  Provide the file, the property
+    to read into, and optionally a regular expresion to filter on.
   -->
   <macrodef name="loadlist">
     <attribute name="src"/>
@@ -167,9 +167,8 @@
   </macrodef>
 
   <!--
-    creates symlinks for jpackage jars
+    Creates symlinks for jpackage jars.
     Optionally contains any elements that can be passed to exec.
-    Primarily meant for setting custom environment variables.
   -->
   <macrodef name="jpackage-deps">
     <attribute name="jars"/>
@@ -193,14 +192,12 @@
     <attribute name="dir" />
 
     <sequential>
-      <!-- Terrible hack to enable build-jar-repository to look inside an SCL
-           for JARs.  See https://bugzilla.redhat.com/show_bug.cgi?id=1127346 -->
-      <condition property="build.jar.override" value="JAVAAPP_LIBDIR">
+      <condition property="location.override" value="JAVAAPP_LIBDIR">
         <equals arg1="${dist.name}" arg2="el6"/>
       </condition>
 
-      <condition property="build.jar.override" value="_javadirs">
-        <equals arg1="${dist.name}" arg2="el7"/>
+      <condition property="location.override" value="JAVA_LIBDIR">
+        <equals arg1="${dist.name}" arg2="el7"/> 
       </condition>
 
       <!-- At this point all the SCL JARs are in the format scl:blah:mydep
@@ -214,10 +211,15 @@
            </tokenfilter>
         </filterchain>
       </loadresource>
-      <echo message="Jar location ${build.jar.override}"/>
+      <!-- Terrible hack to enable build-jar-repository to look inside an SCL
+       for JARs.  See https://bugzilla.redhat.com/show_bug.cgi?id=1127346 -->
+      <property name="tmp.javaconf" value="${target.dir}/@{scl}"/>
+      <mkdir dir="${tmp.javaconf}/.java"/>
+      <echo message="${location.override}=/opt/rh/@{scl}/root/usr/share/java" file="${tmp.javaconf}/.java/java.conf"/>
       <jpackage-deps jars="${cleaned.jars}" dir="@{dir}">
-        <env key="${build.jar.override}" value="/opt/rh/@{scl}/root/usr/share/java" />
+        <env key="HOME" value="${tmp.javaconf}" />
       </jpackage-deps>
+      <delete dir="${tmp.javaconf}"/>
     </sequential>
   </macrodef>
 </project>
