Translations on Gutterball and Common
New projects in Zanata: candlepin-common and gutterball
Extracted/pushed/pulled candlepin strings.

--- a/common/build.xml
+++ b/common/build.xml
@@ -61,7 +61,7 @@
               value="${target.dir}/candlepin-common-${version}.jar" />
   </target>
 
-  <target name="da_popo">
+  <target name="msgfmt">
     <mkdir dir="${target.dir}/generated-source" />
     <apply executable="msgfmt" failonerror="true" relative="true">
       <arg value="--java2"/>
@@ -87,8 +87,7 @@
     </apply>
   </target>
 
-  <!-- target name="init" depends="setvr, da_popo" / -->
-  <target name="init" depends="setvr" />
+  <target name="init" depends="setvr, msgfmt" />
 
   <target name="compile" depends="init">
     <mkdir dir="${target.dir}/classes" />
