keep da_popo alive. It's part of our history.
Inside joke referencing a fun time in Red Hat Satellite history, when I
was cleaning a whiteboard but it looked like I was tagging a wall. And
KS came by and said 'Watch out, the popo is coming'.

--- a/common/build.xml
+++ b/common/build.xml
@@ -61,7 +61,7 @@
               value="${target.dir}/candlepin-common-${version}.jar" />
   </target>
 
-  <target name="msgfmt">
+  <target name="da_popo">
     <mkdir dir="${target.dir}/generated-source" />
     <apply executable="msgfmt" failonerror="true" relative="true">
       <arg value="--java2"/>
@@ -87,7 +87,7 @@
     </apply>
   </target>
 
-  <target name="init" depends="setvr, msgfmt" />
+  <target name="init" depends="setvr, da_popo" />
 
   <target name="compile" depends="init">
     <mkdir dir="${target.dir}/classes" />
