--- a/server/build.xml
+++ b/server/build.xml
@@ -73,7 +73,7 @@
               value="${target.dir}/candlepin-certgen-${version}.jar" />
   </target>
 
-  <target name="msgfmt">
+  <target name="da_popo">
     <mkdir dir="${target.dir}/generated-source" />
     <apply executable="msgfmt" failonerror="true" relative="true">
       <arg value="--java2"/>
