Spec file fixes.
* Add missing Requires for gutterball.
* Add missing OAuth dependencies for common.
* Change gutterball.conf from being installed as a directory.

--- a/common/build.xml
+++ b/common/build.xml
@@ -127,6 +127,7 @@
     <jar destfile="${common.jar}">
       <fileset dir="${target.dir}/classes">
         <include name="**/candlepin/common/**"/>
+        <include name="**/net/oauth/signature/**"/>
       </fileset>
       <manifest>
         <attribute name="Implementation-Vendor" value="" />
