--- a/gutterball/build.xml
+++ b/gutterball/build.xml
@@ -43,7 +43,7 @@
     <apply executable="msgfmt" failonerror="true" relative="true">
       <arg value="--java2"/>
       <arg value="--resource"/>
-      <arg value="org.candlepin.i18n.Messages"/>
+      <arg value="org.candlepin.gutterball.i18n.Messages"/>
       <arg value="-d"/>
       <arg value="${target.dir}/generated-source"/>
       <arg value="--locale"/>
