--- a/rel-eng/releasers.conf
+++ b/rel-eng/releasers.conf
@@ -37,4 +37,5 @@ autobuild_tags = candlepin-nightly-rhel6 candlepin-nightly-fedora16
 
 [katello-koji]
 releaser = tito.release.KojiReleaser
-autobuild_tags = katello-thirdparty-candlepin-rhel6 katello-thirdparty-candlepin-fedora19 katello-thirdparty-candlepin-rhel7
+autobuild_tags = katello-thirdparty-candlepin-rhel6 katello-thirdparty-candlepin-rhel7
+
