--- a/rel-eng/releasers.conf
+++ b/rel-eng/releasers.conf
@@ -3,37 +3,27 @@ releaser = tito.release.YumRepoReleaser
 builder = tito.builder.MockBuilder
 builder.mock = fedora-20-x86_64-candlepin
 rsync = fedorapeople.org:/srv/repos/candlepin/candlepin/fedora-20/x86_64/
+srpm_disttag = .fc20
 
-[yum-f19-x86_64]
+[yum-f21-x86_64]
 releaser = tito.release.YumRepoReleaser
 builder = tito.builder.MockBuilder
-builder.mock = fedora-19-x86_64-candlepin
-rsync = fedorapeople.org:/srv/repos/candlepin/candlepin/fedora-19/x86_64/
+builder.mock = fedora-21-x86_64-candlepin
+rsync = fedorapeople.org:/srv/repos/candlepin/candlepin/fedora-21/x86_64/
+srpm_disttag = .fc21
 
-# Public RHEL repos:
-# We use the EL6 packages on EL5
 [yum-rhel-x86_64]
 releaser = tito.release.YumRepoReleaser
 builder = tito.builder.MockBuilder
 builder.mock = epel-6-x86_64-candlepin
 builder.mock_args = -D "reqcpdeps 1"
-rsync = fedorapeople.org:/srv/repos/candlepin/candlepin/epel-6Server/x86_64/ fedorapeople.org:/srv/repos/candlepin/candlepin/epel-6/x86_64/ fedorapeople.org:/srv/repos/candlepin/candlepin/epel-5Server/x86_64/
-
-# Internal RHEL repos: (NOTE: only zeus has perms to do this)
-# We use the EL6 packages on EL5
-[internal-yum-rhel-ZEUSONLY]
-releaser = tito.release.YumRepoReleaser
-builder = tito.builder.BrewDownloadBuilder
-builder.disttag = el6_2
-rsync = dept.rhndev.redhat.com:/var/www/dept/yum/candlepin/0.5/RHEL/6/ dept.rhndev.redhat.com:/var/www/dept/yum/candlepin/0.5/RHEL/5/
+#rsync = fedorapeople.org:/srv/repos/candlepin/candlepin/epel-6Server/x86_64/ fedorapeople.org:/srv/repos/candlepin/candlepin/epel-6/x86_64/ fedorapeople.org:/srv/repos/candlepin/candlepin/epel-5Server/x86_64/
+rsync = fedorapeople.org:/srv/repos/candlepin/candlepin/epel-6Server/x86_64/ fedorapeople.org:/srv/repos/candlepin/candlepin/epel-6/x86_64/
+srpm_disttag = .el6
 
 [rhel]
 releaser = tito.release.DistGitReleaser
 branches = candlepin-1-rhel-6 candlepin-1-rhel-7
-
-[koji]
-releaser = tito.release.KojiReleaser
-autobuild_tags = candlepin-nightly-rhel6 candlepin-nightly-fedora16
 
 [katello-koji]
 releaser = tito.release.KojiReleaser
