--- a/gutterball/pom.xml
+++ b/gutterball/pom.xml
@@ -2,20 +2,21 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.candlepin</groupId>
-  <artifactId>candlepin</artifactId>
-  <version>0.9.39</version>
+  <artifactId>gutterball</artifactId>
+  <version>1.0.9</version>
   <properties>
-    <org.apache.qpid-qpid-common.version>0.22</org.apache.qpid-qpid-common.version>
-    <org.apache.qpid-qpid-client.version>0.22</org.apache.qpid-qpid-client.version>
+    <org.apache.qpid-qpid-common.version>0.30</org.apache.qpid-qpid-common.version>
+    <org.apache.qpid-qpid-client.version>0.30</org.apache.qpid-qpid-client.version>
     <org.apache.mina-mina-core.version>1.0.1</org.apache.mina-mina-core.version>
     <org.apache.mina-mina-filter-ssl.version>1.0.1</org.apache.mina-mina-filter-ssl.version>
     <geronimo-spec-geronimo-spec-jms.version>1.1-rc4</geronimo-spec-geronimo-spec-jms.version>
-    <org.bouncycastle-bcprov-jdk16.version>1.46</org.bouncycastle-bcprov-jdk16.version>
     <com.google.guava-guava.version>13.0</com.google.guava-guava.version>
     <commons-codec-commons-codec.version>1.4</commons-codec-commons-codec.version>
     <commons-collections-commons-collections.version>3.1</commons-collections-commons-collections.version>
     <commons-io-commons-io.version>1.3.2</commons-io-commons-io.version>
     <commons-lang-commons-lang.version>2.5</commons-lang-commons-lang.version>
+    <postgresql-postgresql.version>9.0-801.jdbc4</postgresql-postgresql.version>
+    <mysql-mysql-connector-java.version>5.1.26</mysql-mysql-connector-java.version>
     <org.xnap.commons-gettext-commons.version>0.9.6</org.xnap.commons-gettext-commons.version>
     <com.google.inject.extensions-guice-assistedinject.version>3.0</com.google.inject.extensions-guice-assistedinject.version>
     <com.google.inject.extensions-guice-multibindings.version>3.0</com.google.inject.extensions-guice-multibindings.version>
@@ -42,11 +43,6 @@
     <org.hibernate.javax.persistence-hibernate-jpa-2.0-api.version>1.0.1.Final</org.hibernate.javax.persistence-hibernate-jpa-2.0-api.version>
     <javax.validation-validation-api.version>1.0.0.GA</javax.validation-validation-api.version>
     <javax.transaction-jta.version>1.1</javax.transaction-jta.version>
-    <org.hornetq-hornetq-server.version>2.3.5.Final</org.hornetq-hornetq-server.version>
-    <org.hornetq-hornetq-core-client.version>2.3.5.Final</org.hornetq-hornetq-core-client.version>
-    <org.hornetq-hornetq-commons.version>2.3.5.Final</org.hornetq-hornetq-commons.version>
-    <org.hornetq-hornetq-journal.version>2.3.5.Final</org.hornetq-hornetq-journal.version>
-    <org.jboss.netty-netty.version>3.2.1.Final</org.jboss.netty-netty.version>
     <com.fasterxml.jackson.core-jackson-annotations.version>2.3.0</com.fasterxml.jackson.core-jackson-annotations.version>
     <com.fasterxml.jackson.core-jackson-core.version>2.3.0</com.fasterxml.jackson.core-jackson-core.version>
     <com.fasterxml.jackson.core-jackson-databind.version>2.3.0</com.fasterxml.jackson.core-jackson-databind.version>
@@ -55,15 +51,12 @@
     <com.fasterxml.jackson.module-jackson-module-jsonSchema.version>2.3.0</com.fasterxml.jackson.module-jackson-module-jsonSchema.version>
     <com.fasterxml.jackson.module-jackson-module-jaxb-annotations.version>2.3.0</com.fasterxml.jackson.module-jackson-module-jaxb-annotations.version>
     <com.fasterxml.jackson.datatype-jackson-datatype-hibernate4.version>2.3.0</com.fasterxml.jackson.datatype-jackson-datatype-hibernate4.version>
-    <org.liquibase-liquibase-core.version>3.1.0</org.liquibase-liquibase-core.version>
     <ch.qos.logback-logback-core.version>1.0.13</ch.qos.logback-logback-core.version>
     <ch.qos.logback-logback-classic.version>1.0.13</ch.qos.logback-logback-classic.version>
     <org.slf4j-jcl-over-slf4j.version>1.7.5</org.slf4j-jcl-over-slf4j.version>
+    <org.slf4j-log4j-over-slf4j.version>1.7.5</org.slf4j-log4j-over-slf4j.version>
     <org.slf4j-slf4j-api.version>1.7.5</org.slf4j-slf4j-api.version>
-    <net.oauth.core-oauth.version>20100527</net.oauth.core-oauth.version>
-    <net.oauth.core-oauth-provider.version>20100527</net.oauth.core-oauth-provider.version>
     <javax.servlet-servlet-api.version>2.5</javax.servlet-servlet-api.version>
-    <org.quartz-scheduler-quartz.version>2.1.5</org.quartz-scheduler-quartz.version>
     <org.jboss.resteasy-jaxrs-api.version>2.3.7.Final</org.jboss.resteasy-jaxrs-api.version>
     <org.jboss.resteasy-resteasy-jaxrs.version>2.3.7.Final</org.jboss.resteasy-resteasy-jaxrs.version>
     <org.jboss.resteasy-resteasy-jaxb-provider.version>2.3.7.Final</org.jboss.resteasy-resteasy-jaxb-provider.version>
@@ -76,8 +69,8 @@
     <javax.mail-mail.version>1.4</javax.mail-mail.version>
     <org.mozilla-rhino.version>1.7R3</org.mozilla-rhino.version>
     <com.sun.xml.bind-jaxb-impl.version>2.1.12</com.sun.xml.bind-jaxb-impl.version>
-    <postgresql-postgresql.version>9.0-801.jdbc4</postgresql-postgresql.version>
-    <mysql-mysql-connector-java.version>5.1.26</mysql-mysql-connector-java.version>
+    <net.oauth.core-oauth.version>20100527</net.oauth.core-oauth.version>
+    <net.oauth.core-oauth-provider.version>20100527</net.oauth.core-oauth-provider.version>
   </properties>
   <dependencies>
     <dependency>
@@ -106,11 +99,6 @@
       <version>${geronimo-spec-geronimo-spec-jms.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.bouncycastle</groupId>
-      <artifactId>bcprov-jdk16</artifactId>
-      <version>${org.bouncycastle-bcprov-jdk16.version}</version>
-    </dependency>
-    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>${com.google.guava-guava.version}</version>
@@ -134,6 +122,16 @@
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>${commons-lang-commons-lang.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>${postgresql-postgresql.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql-mysql-connector-java.version}</version>
     </dependency>
     <dependency>
       <groupId>org.xnap.commons</groupId>
@@ -266,31 +264,6 @@
       <version>${javax.transaction-jta.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.hornetq</groupId>
-      <artifactId>hornetq-server</artifactId>
-      <version>${org.hornetq-hornetq-server.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.hornetq</groupId>
-      <artifactId>hornetq-core-client</artifactId>
-      <version>${org.hornetq-hornetq-core-client.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.hornetq</groupId>
-      <artifactId>hornetq-commons</artifactId>
-      <version>${org.hornetq-hornetq-commons.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.hornetq</groupId>
-      <artifactId>hornetq-journal</artifactId>
-      <version>${org.hornetq-hornetq-journal.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.netty</groupId>
-      <artifactId>netty</artifactId>
-      <version>${org.jboss.netty-netty.version}</version>
-    </dependency>
-    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
       <version>${com.fasterxml.jackson.core-jackson-annotations.version}</version>
@@ -331,11 +304,6 @@
       <version>${com.fasterxml.jackson.datatype-jackson-datatype-hibernate4.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.liquibase</groupId>
-      <artifactId>liquibase-core</artifactId>
-      <version>${org.liquibase-liquibase-core.version}</version>
-    </dependency>
-    <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
       <version>${ch.qos.logback-logback-core.version}</version>
@@ -352,28 +320,18 @@
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
+      <version>${org.slf4j-log4j-over-slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${org.slf4j-slf4j-api.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>net.oauth.core</groupId>
-      <artifactId>oauth</artifactId>
-      <version>${net.oauth.core-oauth.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>net.oauth.core</groupId>
-      <artifactId>oauth-provider</artifactId>
-      <version>${net.oauth.core-oauth-provider.version}</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>${javax.servlet-servlet-api.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.quartz-scheduler</groupId>
-      <artifactId>quartz</artifactId>
-      <version>${org.quartz-scheduler-quartz.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
@@ -436,14 +394,14 @@
       <version>${com.sun.xml.bind-jaxb-impl.version}</version>
     </dependency>
     <dependency>
-      <groupId>postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>${postgresql-postgresql.version}</version>
+      <groupId>net.oauth.core</groupId>
+      <artifactId>oauth</artifactId>
+      <version>${net.oauth.core-oauth.version}</version>
     </dependency>
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>${mysql-mysql-connector-java.version}</version>
+      <groupId>net.oauth.core</groupId>
+      <artifactId>oauth-provider</artifactId>
+      <version>${net.oauth.core-oauth-provider.version}</version>
     </dependency>
   </dependencies>
 </project>
