Add packaging type to generated POM files.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,6 +4,7 @@
   <groupId>org.candlepin</groupId>
   <artifactId>candlepin-common</artifactId>
   <version>1.0.22</version>
+  <packaging>jar</packaging>
   <properties>
     <commons-codec-commons-codec.version>1.4</commons-codec-commons-codec.version>
     <commons-collections-commons-collections.version>3.1</commons-collections-commons-collections.version>
