--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,6 +4,7 @@
   <groupId>org.candlepin</groupId>
   <artifactId>candlepin</artifactId>
   <version>0.9.51.4</version>
+  <packaging>war</packaging>
   <properties>
     <org.apache.qpid-qpid-common.version>0.30</org.apache.qpid-qpid-common.version>
     <org.apache.qpid-qpid-client.version>0.30</org.apache.qpid-qpid-client.version>
