Add the Maven assembly plugin to generated POM files.
The Maven assembly plugin creates a tarball of the entire project which
we need when building the RPM since the Maven generated artifacts don't
include the license, conf files, etc.

The buildr pom task now adds inserts the assembly plugin and adds the
ability to insert other plugins with Procs defined in the project
definition.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -267,4 +267,25 @@
       <version>${net.oauth.core-oauth-provider.version}</version>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>project</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+        <executions>
+          <execution>
+            <id>create-archive</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
