Update tito config for MEAD building.

--- a/rel-eng/releasers.conf
+++ b/rel-eng/releasers.conf
@@ -29,3 +29,9 @@ branches = candlepin-1-rhel-6 candlepin-1-rhel-7
 releaser = tito.release.KojiReleaser
 autobuild_tags = katello-thirdparty-candlepin-rhel6 katello-thirdparty-candlepin-rhel7
 
+[mead]
+releaser = tito.release.DistGitMeadReleaser
+branches = candlepin-mead-rhel-6
+mead_scm = git://git.app.eng.bos.redhat.com/candlepin.git
+mead_target = candlepin-mead-rhel-6-maven-candidate-nosign
+mead_push_url = git+ssh://MEAD_SCM_USERNAME@code.engineering.redhat.com/candlepin.git
