Rebase off RHEL 6.6 for rpm containers.

--- a/docker/candlepin-rhel6/Dockerfile
+++ b/docker/candlepin-rhel6/Dockerfile
@@ -1,8 +1,12 @@
 # Latest brew candlepin RPMs on RHEL 6
-FROM candlepin/candlepin-preinstall-rhel6
+FROM candlepin/candlepin-rhel6-base
 MAINTAINER Devan Goodwin <dgoodwin@redhat.com>
 
 ADD candlepin.repo /etc/yum.repos.d/
+
+# https://bugzilla.redhat.com/show_bug.cgi?id=1205054
+RUN yum downgrade -y glibc glibc-common gdbm
+
 RUN yum install -y candlepin
 
 ADD startup.sh /root/startup.sh
